user auth and session

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -60,3 +60,9 @@
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+.profile-details {
+  background-color: rgba(67, 0, 146, 0.2);
+  border-radius: 10px;
+
+}
