home page show users for admins

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -89,3 +89,11 @@
   border-top: 2px solid #450064;
   overflow-wrap: break-word;
 }
+
+.home-user {
+  background-color: rgba(67, 0, 146, 0.2);
+  margin: 0 1rem .5rem 1rem;
+  border: 2px solid #450064;
+  border-radius: 1rem;
+  padding-left: 1rem;
+}
